﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-05-08
	Fix: Weird NullRefrenceException.
	Added: Splash-load window.
### 2019-05-07
	Changed: Loading is slightly altered to accommodate following changes.
	Changed: Main window display is changed. It no longer should be topmost at launch. Only when user manually has requested the window.
### 2019-05-06
	Fix: Audio hooking could sometimes silently fail for a time.
	Fix: Exiting too quickly causes an exception as tasks are cancelled.
### 2019-05-04
	Fixed: ArgumentNullException when trying to open a rule with no executables defined.
### 2019-05-02
	Fixed: Warnings about misconfigured INI files now report correct line number instead of -1.
### 2019-05-01
	Changed: Rules with no priority, affinity, or power plan are not considered valid. Responsibility is on the user.
	Changed: Updated from .NET 4.7.2 to 4.8
	Added: Support for multiple executables per watchlist rule.
	Disabled: Filename validation as it does not play well with the multiple executables implementation.
### 2019-04-30
	Added: Parent finding. Enabled per-rule and in general in advanced options.
### 2019-04-28
	Added: Advanced configuration now temporarily hosts ignore and protected lists.
		No configuration is allowed in the UI for these as they're purely informative. These will be moved elsewhere in later update.
### 2019-04-27
	Added: Power menu in main window so power changes are available outside of the tray context menu.
### 2019-04-25
	Added: IPC component warns about insufficient permissions.
	Fixed: Using statement was hiding an exception because NamedPipe dispose was throwing a new one under some circumstances.
	Added: Third party license dialog.
	Changed: Several messageboxes are now centered on parent instead of screen.
### 2019-04-24
	Fixed: Watchlist changes outside of creating new rules was not being saved properly.
### 2019-04-23