@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.13...]
+### 2019-05-13
+	Fix: Error when shutting down if WMI service is acting up.
 ### 2019-05-08
 	Fix: Weird NullRefrenceException.
 	Added: Splash-load window.
